--- a/src/style.css
+++ b/src/style.css
@@ -86,3 +86,19 @@ p {
 .email-link:hover {
   text-decoration: underline;
 }
+@media (max-width: 960px) {
+  .container {
+    padding: 0;
+    text-align: center;
+  }
+  h1,
+  h2 {
+    font-size: 44px;
+  }
+  .container-fluid {
+    padding: 80px 20px;
+  }
+  .container .primary-link {
+    padding: 20px 75px;
+  }
+}
